[project]
name = "dfalib"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "rstr>=3.2.2",
    "graphviz>=0.20.3",
    "tqdm>=4.67.1",
    "numpy>=2.2.3",
    "regex>=2024.11.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dfalib"]
