[metadata]
name = dafna
version = 0.0.5
author = Yurushkin M.V, Gervich L.R., Bachurin S.S.
author_email = m.yurushkin@gmail.com
description = Dafna Package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires= >=3.6
install_requires =
    numpy

[options.packages.find]
where = src



